# cmakelib-component-cmconf

./: CMCONF.cmake  CMCONFConfig.cmake  FindCMCONF.cmake  LICENSE  README.md
.github/workflows/: examples.yml  tests.yml
example/: CMakeLists.txt  README.md
example/config/: CMCONF_EXAMPLEConfig.cmake  CMCONF_EXAMPLE_SYSTEMConfig.cmake
resource/: CMakeLists.txt.in
test/: CMakeLists.txt  README.md  TEST.cmake  cache_var.cmake  test_cmconf_helpers.cmake
test/config_templates/: CMCONF_TESTConfig.cmake  CMCONF_TEST_CASE_SENSITIVEConfig.cmake  CMCONF_TEST_SYSTEMConfig.cmake  CMCONF_TEST_WRONGConfig.cmake  config_template.cmake
test/config_templates/duplicate_config/: CMCONF_TESTConfig.cmake
test/test_cases/fail/config_already_installed/: CMakeLists.txt
test/test_cases/fail/config_not_installed/: CMakeLists.txt
test/test_cases/fail/config_not_installed/test_config/: CMakeLists.txt
test/test_cases/fail/env_variable_config_required/: CMakeLists.txt
test/test_cases/fail/env_variable_config_required/test_config/: CMakeLists.txt
test/test_cases/fail/get_after_set/: CMakeLists.txt
test/test_cases/fail/get_after_set/test_config/: CMakeLists.txt
test/test_cases/fail/get_after_set/test_config_fresh_var/: CMakeLists.txt
test/test_cases/fail/install_from_cmake_project/: CMakeLists.txt
test/test_cases/fail/install_from_cmake_project/test_config/: CMakeLists.txt
test/test_cases/fail/install_project_execution_failure/: CMakeLists.txt  malformed_template.cmake.in
test/test_cases/fail/install_project_execution_failure/test_config/: CMCONF_TESTConfig.cmake
test/test_cases/fail/invalid_system_name/: CMakeLists.txt
test/test_cases/fail/invalid_system_name/test_config/: CMakeLists.txt
test/test_cases/fail/invalid_variable_name/: CMakeLists.txt
test/test_cases/fail/invalid_variable_name/test_config/: CMakeLists.txt
test/test_cases/fail/package_exists_different_location/: CMakeLists.txt
test/test_cases/fail/set_after_get/: CMakeLists.txt
test/test_cases/fail/set_after_get/test_config/: CMakeLists.txt
test/test_cases/fail/system_name_change_attempt/: CMakeLists.txt
test/test_cases/fail/system_name_change_attempt/test_config/: CMakeLists.txt
test/test_cases/fail/system_not_set/: CMakeLists.txt
test/test_cases/fail/system_not_set/test_config/: CMakeLists.txt
test/test_cases/fail/uninstall_from_cmake_project/: CMakeLists.txt
test/test_cases/fail/uninstall_from_cmake_project/test_config/: CMakeLists.txt
test/test_cases/fail/uninstall_install_conflict/: CMakeLists.txt
test/test_cases/fail/uninstall_install_conflict/test_config/: CMakeLists.txt
test/test_cases/fail/uninstall_not_needed_warning/: CMakeLists.txt
test/test_cases/fail/uninstall_not_needed_warning/test_config/: CMakeLists.txt
test/test_cases/fail/unix_home_missing/: CMakeLists.txt
test/test_cases/fail/unix_home_missing/test_config/: CMakeLists.txt
test/test_cases/fail/variable_already_exists/: CMakeLists.txt
test/test_cases/fail/variable_already_exists/test_config/: CMakeLists.txt
test/test_cases/fail/variable_not_defined/: CMakeLists.txt
test/test_cases/fail/variable_not_defined/test_config/: CMakeLists.txt
test/test_cases/fail/windows_userprofile_missing/: CMakeLists.txt
test/test_cases/fail/windows_userprofile_missing/test_config/: CMakeLists.txt
test/test_cases/fail/wrong_filename/: CMakeLists.txt
test/test_cases/pass/basic_get/: CMakeLists.txt
test/test_cases/pass/cache_variable_behavior/: CMakeLists.txt
test/test_cases/pass/case_insensitive/: CMakeLists.txt
test/test_cases/pass/different_system_names/: CMakeLists.txt
test/test_cases/pass/different_system_names/test_system/: CMakeLists.txt
test/test_cases/pass/different_system_names/test_system_system/: CMakeLists.txt
test/test_cases/pass/env_variable_fallback/: CMakeLists.txt
test/test_cases/pass/env_variable_override/: CMakeLists.txt
test/test_cases/pass/multiple_variables/: CMakeLists.txt
test/test_cases/pass/uninstall_verification/: CMakeLists.txt
