
IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.22 FATAL_ERROR)
    PROJECT(CMCONF_EXAMPLE)
ENDIF()

FIND_PACKAGE(CMLIB COMPONENTS CMCONF REQUIRED)

CMCONF_INIT_SYSTEM("EXAMPLE")

CMCONF_GET("VARIABLE_A")
CMCONF_GET(IS_IT_OK)
CMCONF_GET(GOOGLE_URI)

MESSAGE(STATUS "VARIABLE_A: ${VARIABLE_A}")
MESSAGE(STATUS "IS_IT_OK:   ${IS_IT_OK}")
MESSAGE(STATUS "GOOGLE_URI: ${GOOGLE_URI}")
