## Main
#
# Test CMCONF_GET error when system is not set
#

IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
    PROJECT(CMCONF_SYSTEM_NOT_SET_TEST)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../TEST.cmake")

TEST_RUN_AND_CHECK_OUTPUT("test_config"
    FATAL_ERROR_MESSAGE "CMCONF - System name is not set\\..*Call CMCONF_INIT_SYSTEM before using.*CMCONF_GET or CMCONF_SET"
)
