## Main
#
# Test CMCONF_INIT_SYSTEM error when both UNINSTALL and INSTALL_AS_SYMLINK are ON
#

IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
    PROJECT(CMCONF_UNINSTALL_INSTALL_CONFLICT_TEST)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../TEST.cmake")

TEST_RUN_AND_CHECK_OUTPUT("test_config"
    FATAL_ERROR_MESSAGE "CMCONF\\\\[TEST\\\\] - Uninstall nad Install cannot be preformed at one time\\..*Set.*either CMCONF_UNINSTALL or CMCONF_INSTALL_AS_SYMLINK to OFF\\."
)
