## Main
#
# Test CMCONF_SET cache variable behavior - first set wins, subsequent ignored
#

IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
    PROJECT(CMCONF_CACHE_VARIABLE_BEHAVIOR_TEST)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../TEST.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../../CMCONF.cmake")

CMCONF_INIT_SYSTEM("DUPLICATE_TEST")

CMCONF_SET("TEST_VAR" "first_value")
CMCONF_SET("TEST_VAR" "second_value")

TEST_VAR_DEFINED(DUPLICATE_TEST_TEST_VAR)
TEST_VAR_EQUALS_LITERAL(DUPLICATE_TEST_TEST_VAR "first_value")