## Main
#
# Test CMCONF_GET with different system names (system isolation)
# This test demonstrates that multiple systems can coexist
#

IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
    PROJECT(CMCONF_GET_DIFFERENT_SYSTEMS_TEST)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../TEST.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../test_cmconf_helpers.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../config_templates/config_template.cmake")

TEST_CMCONF_CHECK_AND_INSTALL_CONFIG("${CMCONF_TEST_CONFIG_FILE}" "TEST")
TEST_CMCONF_CHECK_AND_INSTALL_CONFIG("${CMCONF_TEST_SYSTEM_CONFIG_FILE}" "TEST_SYSTEM")

TEST_RUN("${CMAKE_CURRENT_LIST_DIR}/test_system")
TEST_RUN("${CMAKE_CURRENT_LIST_DIR}/test_system_system")

TEST_CMCONF_UNINSTALL_CONFIG("${CMCONF_TEST_CONFIG_FILE}" "TEST")
TEST_CMCONF_UNINSTALL_CONFIG("${CMCONF_TEST_SYSTEM_CONFIG_FILE}" "TEST_SYSTEM")
