## Main
#
# Test CMCONF_GET with multiple variables from same system
#

IF(NOT DEFINED CMAKE_SCRIPT_MODE_FILE)
    CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
    PROJECT(CMCONF_GET_MULTIPLE_VARIABLES_TEST)
ENDIF()

FIND_PACKAGE(CMLIB REQUIRED)

INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../TEST.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../cache_var.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../../CMCONF.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../test_cmconf_helpers.cmake")
INCLUDE("${CMAKE_CURRENT_LIST_DIR}/../../../config_templates/config_template.cmake")

TEST_CMCONF_CHECK_AND_INSTALL_CONFIG("${CMCONF_TEST_CONFIG_FILE}" "TEST")

CMCONF_INIT_SYSTEM(TEST)

CMCONF_GET(VARIABLE_A)
CMCONF_GET(VARIABLE_B)
CMCONF_GET(VARIABLE_C)

TEST_VAR_DEFINED(VARIABLE_A)
TEST_VAR_DEFINED(VARIABLE_B)
TEST_VAR_DEFINED(VARIABLE_C)

TEST_VAR_EQUALS_LITERAL(VARIABLE_A "test_value_a")
TEST_VAR_EQUALS_LITERAL(VARIABLE_B "test_value_b")
TEST_VAR_EQUALS_LITERAL(VARIABLE_C "test_value_c")

TEST_VAR_NOT_EQUAL(VARIABLE_A VARIABLE_B)
TEST_VAR_NOT_EQUAL(VARIABLE_A VARIABLE_C)
TEST_VAR_NOT_EQUAL(VARIABLE_B VARIABLE_C)

TEST_CMCONF_UNINSTALL_CONFIG("${CMCONF_TEST_CONFIG_FILE}" "TEST")
